# aria-testing

./: .gitignore  CLAUDE.md  Justfile  README.md  TODO.md  free-threaded-faster.txt  pyproject.toml
.aiassistant/rules/: tdom.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  pages.yml  pypi.yml
.junie/: guidelines.md
docs/: api.md  architecture.md  assertion-helpers.md  benchmark.md  best-practices.md  conf.py  contributing.md  examples.md  index.md  performance.md  queries.md
src/aria_testing/: __init__.py  cache.py  errors.py  queries.py  utils.py
src/aria_testing/assertions/: __init__.py  helpers.py
src/aria_testing/profiling/: __init__.py  benchmark.py  benchmark_caching.py  profiler.py  profiler_queries.py  profiler_tests.py
tests/: conftest.py  test_aria_testing_errors.py  test_assertions.py  test_cache.py  test_concurrency.py  test_errors.py  test_find_by_class.py  test_find_by_id.py  test_implicit_roles.py  test_label_text.py  test_queries.py  test_utils.py
