[project]
name = "aria-testing"
version = "0.1.0"
description = "Accessibility-focused DOM testing library for tdom"
readme = "README.md"
authors = [
    { name = "pauleveritt", email = "pauleveritt@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tdom",
]

[project.urls]
Documentation = "https://t-strings.github.io/aria-testing/"
Repository = "https://github.com/t-strings/aria-testing"
Homepage = "https://github.com/t-strings/aria-testing"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-p no:doctest"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "sphinx>=8.0.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx-autobuild>=2024.9.3",
    "ty>=0.0.1a25",
    "coverage>=7.11.2",
]
